<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".ui.home.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:background="@color/purple"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/Verify_text"
                    android:layout_margin="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/now"
                    android:textStyle="bold"
                    android:layout_gravity="end"
                    android:background="@drawable/border"
                    android:textSize="18sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_margin="10dp"/>




            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="vertical"

                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/img_16"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_details"
                    android:layout_margin="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:text="@string/set_account"
                    android:backgroundTint="@color/purple_700"
                    app:cornerRadius="10dp"/>




            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/img_18"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apply"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_desk"
                    android:layout_margin="10dp"/>
                <com.shuhart.stepview.StepView
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/step_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    app:sv_selectedCircleColor="@color/purple_700"
                    app:sv_selectedTextColor="@color/purple_700"
                    app:sv_stepLineWidth="1dp"
                    app:sv_stepPadding="4dp"
                    app:sv_nextTextColor="@color/black"
                    app:sv_nextStepLineColor="@color/black"
                    app:sv_doneCircleColor="@color/teal_700"
                    app:sv_doneStepLineColor="@color/teal_700"
                    app:sv_doneCircleRadius="12dp"
                    app:sv_selectedCircleRadius="12dp"
                    app:sv_selectedStepNumberColor="@color/white"
                    app:sv_stepViewStyle="@style/StepView"
                    app:sv_doneStepMarkColor="@color/white"
                    app:sv_animationType="Line"
                    app:sv_steps="@array/steps"
                    app:sv_doneTextColor="@color/teal_200"
                    />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:text="@string/reapply"
                        android:backgroundTint="@color/purple_700"
                        app:cornerRadius="10dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:text="@string/status"
                        android:backgroundTint="@color/lavender"
                        app:cornerRadius="10dp"/>
                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/img_19"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calc"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calc_details"
                    android:layout_margin="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:text="@string/calcu"
                    android:backgroundTint="@color/purple_700"
                    app:cornerRadius="10dp" />




            </LinearLayout>


            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/img_20"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/updates"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="20dp"/>


                </LinearLayout>

                <com.github.hamzaahmedkhan.counteranimationtextview.CountAnimationTextView
                    android:id="@+id/user_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2500"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/teal_200"
                    android:text="@string/issued"
                    android:layout_marginBottom="10dp"
                    android:layout_margin="10dp"/>





            </LinearLayout>





        </LinearLayout>

    </ScrollView>
</LinearLayout>
